--- a/whyksd.html
+++ b/whyksd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Khuvultu logo.png" type="image/x-icon">
+    <link rel="icon" href="Ksd logo.png" type="image/x-icon">
 
     <title>Why KSD</title>
     <link href="whyksdstyle.css" rel="stylesheet">
@@ -20,7 +20,7 @@
    
            <div class="us">
    
-               <h3>What sets KSD apart</h3>
+               <h3>What sets Ksd apart</h3>
    
            </div>
 
