--- a/whyksd.html
+++ b/whyksd.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="Ksd logo.png" type="image/x-icon">
 
-    <title>Why KSD</title>
+    <title>Why Ksd</title>
     <link href="whyksdstyle.css" rel="stylesheet">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,7 +14,7 @@
 
 <div id="headsection">
     <div class="logo">
-        <a href="index.html" ><img src="Khuvultu logo.png" width="30%" height="85%"></a>  
+        <a href="index.html" ><img src="Ksd logo.png" width="30%" height="85%"></a>  
    
            </div>
    
